# airbnb_challenge

./: db.sqlite3  pyproject.toml
config/: authentication.py  settings.py  urls.py
tweets/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
tweets/migrations/: 0001_initial.py  0002_initial.py  0003_alter_like_tweet_alter_like_user.py
tweets/templates/: tweets.html
users/: admin.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
